# goodix-factory-tools

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh  main.c  package.bat  start.bat
configs/: CTR_100Hz_Gain_10k_Tint_316us_0BG.config
docs/: 01_architecture_analysis.md  02_refactor_design.md  03_user_manual.md  04_release_notes_2026-03-30.md  API接口调用说明.md  README.md
src/api/: gh_http_server.c  gh_http_server.h
src/port/: gh_os_port.h
src/protocol/: gh_protocol.c  gh_protocol.h  gh_rpc.c  gh_rpc.h
src/protocol/chelsea_a/: gh_algo_adapter_common.h  gh_data_common.h  gh_data_package_decode.c  gh_data_package_decode.h  gh_global_config.h  gh_hal_chip.h  gh_hal_config.h  gh_hal_service.h  gh_pragma_pack.h
src/service/: gh_service.c  gh_service.h
src/transport/: gh_transport.c  gh_transport.h
web/frontend/: index.html
